--- a/html/css/output/patterns/01-blocks.css
+++ b/html/css/output/patterns/01-blocks.css
@@ -1,6 +1,9 @@
 .pattern {
   background: url(../../assets/pattern.png);
-  background: url(../../assets/pattern.svg), linear-gradient(transparent, transparent); }
+  background: url(../../assets/pattern.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
 /* Outside blocks
    Sometimes we'll want to add a heading or CTA outside
