--- a/html/css/output/patterns/09-feedback-error.css
+++ b/html/css/output/patterns/09-feedback-error.css
@@ -1,9 +1,12 @@
 .pattern {
   background: url(../../assets/pattern.png);
-  background: url(../../assets/pattern.svg), linear-gradient(transparent, transparent); }
+  background: url(../../assets/pattern.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
 .feedback--error {
-  background-color: #fcc;
-  border-bottom: 0.2em solid #ffb3b3; }
+  background-color: #ffcdb3;
+  border-bottom: 0.2em solid #ffbc9a; }
 
 /*# sourceMappingURL=09-feedback-error.css.map */
