--- a/html/css/sass/_4-colours.scss
+++ b/html/css/sass/_4-colours.scss
@@ -7,9 +7,14 @@ $mid: #008EBE;
 $dark: #003552; 
 
 
-//// Modules / Body
+//// Text-specific colours
 
 $dark-text: #002C44;
+
+$disabled-text: #666;
+
+
+//// Modules / Body
 
 $white: #ffffff; // Yes, really.
 
@@ -19,22 +24,20 @@ $light-pastel: #C0E6F3;
   background: url(../../assets/pattern.png);
   background: url(../../assets/pattern.svg),
     linear-gradient(transparent, transparent);
-    // This trick ensures that our background SVG is only 
-    // used in browsers that support it (a 'coincidence'
-    // feature test: https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image
+    /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */
 }
 
 
 /// Calls to Action / Highlights
 
-$purple: #612B8F;
+$contrast: #dc6f00; // WCAG: Only 18pt+ text
 
-$blue: #085FB1;
+$contrast-alt: #00A659;
 
-$feedback: #D9F2F9;
+$feedback: #bff8ed;
 
-$error: #fcc;
+$error: #ffcdb3;
 
 $disabled: #ccc;
-
-$disabled-text: #666;
