--- a/html/css/sass/_6-guide.scss
+++ b/html/css/sass/_6-guide.scss
@@ -116,6 +116,10 @@
   }
 }
 
+.guide .guidepattern.elements-heading {
+  border-bottom: 0.1em $light-pastel solid;
+} 
+
 .guide .guidepattern.outside {
   margin: 0;
   padding: 0;
