Jabbascripting menus and stuff, progress on header and search components

--- a/html/assets-icons/output/icons.fallback.css
+++ b/html/assets-icons/output/icons.fallback.css
@@ -1,8 +1,18 @@
+.icon-arrow-down { background-image: url('png/arrow-down.png'); background-repeat: no-repeat; }
+
+.icon-arrow-up { background-image: url('png/arrow-up.png'); background-repeat: no-repeat; }
+
+.icon-close { background-image: url('png/close.png'); background-repeat: no-repeat; }
+
 .icon-header-left { background-image: url('png/header-left.png'); background-repeat: no-repeat; }
 
 .icon-header-right { background-image: url('png/header-right.png'); background-repeat: no-repeat; }
 
+.icon-menu { background-image: url('png/menu.png'); background-repeat: no-repeat; }
+
 .icon-pattern { background-image: url('png/pattern.png'); background-repeat: no-repeat; }
+
+.icon-search { background-image: url('png/search.png'); background-repeat: no-repeat; }
 
 .icon-sos-logo { background-image: url('png/sos-logo.png'); background-repeat: no-repeat; }
 
