--- a/html/css/sass/global.scss
+++ b/html/css/sass/global.scss
@@ -6,6 +6,8 @@
 
 @import '_4-colours.scss';
 
+@import '_4-responsive-nav.scss';
+
 @import '_5-font-fallback.scss';
 
 @import '_5.1-typography.scss';
