--- a/html/css/output/patterns/0-header.css
+++ b/html/css/output/patterns/0-header.css
@@ -8,7 +8,7 @@
 .header {
   background-color: #ffffff;
   width: 100%;
-  margin: 0 0 1.5em 0;
+  margin: 0;
   text-align: center; }
 
 .header__part {
@@ -17,17 +17,106 @@
 
 .header__part--brand {
   background-position: left top; }
+  .header__part--brand .icon-sos-logo {
+    margin: 2em 8% 0 8%;
+    width: 84%;
+    height: 5.75em;
+    max-width: 17.8125em; }
+
+.header__search-trigger, .nav__trigger {
+  display: none; }
+  .header__search-trigger .icon-arrow-down, .header__search-trigger .icon-arrow-up, .nav__trigger .icon-arrow-down, .nav__trigger .icon-arrow-up {
+    width: 0.625em;
+    margin: 1.375em 5% 0 0;
+    float: right; }
+  .header__search-trigger .icon-close, .nav__trigger .icon-close {
+    width: 1.25em;
+    height: 1.3125em;
+    margin: 1.03125em 0.85em 1.03125em 5%;
+    float: left; }
+
+.js .header__search-trigger, .js .nav__trigger {
+  display: block; }
 
 .header__search-trigger {
-  background-color: #008EBE; }
+  background-color: #008EBE;
+  cursor: pointer; }
+  .header__search-trigger .icon-search {
+    width: 1.6875em;
+    height: 1.75em;
+    margin: 0.8125em 0.6em 0.8125em 5%;
+    float: left; }
+  .header__search-trigger span {
+    font-size: 1.3em;
+    font-weight: 400;
+    margin: 0.7em 0 0 0;
+    color: #ffffff;
+    float: left; }
 
 .header__part--search {
-  background-position: right top; }
+  background-position: right top;
+  padding: 1.8em 5% 0 5%; }
+  .header__part--search .search__container {
+    width: 100%;
+    max-width: 20.323875em;
+    margin: 0 auto 0 auto;
+    text-align: left; }
+  .header__part--search .form-item-search-block-form {
+    float: left;
+    text-align: left;
+    width: 75%;
+    max-width: 13.92em;
+    display: inline-block; }
+  .header__part--search label {
+    font-size: 1.3em;
+    font-weight: 600; }
+  .header__part--search input[type="text"] {
+    font-size: 1.1em;
+    border: 0.135em solid #003552;
+    padding: 0.36em;
+    height: 2.1375em; }
+    .header__part--search input[type="text"]:focus {
+      border: 0.135em solid #008EBE; }
+  .header__part--search input[type="text"], .header__part--search input[type="submit"] {
+    width: 100%;
+    margin: 0; }
+  .header__part--search .form-actions {
+    width: 25%;
+    display: inline-block;
+    float: left; }
+  .header__part--search input[type="submit"] {
+    color: #ffffff;
+    background-color: #003552;
+    font-size: 1.1em;
+    outline: 0;
+    border: 0.135em solid #003552;
+    vertical-align: -2.22em;
+    max-width: 4.55625em;
+    height: 2.13em; }
+    .header__part--search input[type="submit"]:focus, .header__part--search input[type="submit"]:hover {
+      background-color: #008EBE; }
+  .header__part--search .search__advanced {
+    display: inline-block;
+    font-size: 1.125em;
+    font-weight: 300;
+    padding-top: 0.5em; }
+    .header__part--search .search__advanced a:focus, .header__part--search .search__advanced a:hover {
+      color: #002C44;
+      border-bottom: 0.1em dotted #003552; }
 
-.header__part--brand .icon-sos-logo {
-  margin: 2em 8% 0 8%;
-  width: 84%;
-  height: 5.75em;
-  max-width: 17.8125em; }
+.nav__trigger {
+  background-repeat: repeat;
+  cursor: pointer; }
+  .nav__trigger .icon-menu {
+    width: 1.5em;
+    height: 1.3125em;
+    margin: 1.025em 0.6em 1.025em 5%;
+    float: left; }
+  .nav__trigger span {
+    font-size: 1.3em;
+    font-weight: 400;
+    margin: 0.7em 0 0 0;
+    color: #ffffff;
+    float: left; }
 
 /*# sourceMappingURL=0-header.css.map */
