--- a/html/css/sass/patterns/0-header.scss
+++ b/html/css/sass/patterns/0-header.scss
@@ -7,7 +7,7 @@
 .header {
   background-color: $white;
   width: 100%;
-  margin: 0 0 1.5em 0;
+  margin: 0;
   text-align: center;
 }
 
@@ -18,19 +18,135 @@
 
 .header__part--brand {
   background-position: left top;
+    .icon-sos-logo {
+    margin: 2em 8% 0 8%;
+    width: 84%;
+    height: 5.75em;
+    max-width: 17.8125em;
+  }
+}
+
+.header__search-trigger,
+.nav__trigger {
+  display: none;
+  
+  .icon-arrow-down,
+  .icon-arrow-up {
+    width: 0.625em;
+    margin: 1.375em 5% 0 0;  
+    float: right;
+  }
+  .icon-close {
+    width: 1.25em;
+    height: 1.3125em;
+    margin: 1.03125em 0.85em 1.03125em 5%;
+    float: left;
+  }
+}
+
+.js .header__search-trigger,
+.js .nav__trigger {
+  display: block;
 }
 
 .header__search-trigger {
   background-color: $mid;
+  cursor: pointer;
+  .icon-search {
+    width: 1.6875em;
+    height: 1.75em;
+    margin: 0.8125em 0.6em 0.8125em 5%;
+    float: left;
+  }
+  span {
+    font-size: 1.3em;
+    font-weight: 400;
+    margin: 0.7em 0 0 0;
+    color: $white;
+    float: left;
+  }
 }
 
 .header__part--search {
   background-position: right top;
+  padding: 1.8em 5% 0 5%;
+  .search__container {
+    width: 100%;
+    max-width: 20.323875em;
+    margin: 0 auto 0 auto;
+    text-align: left;
+  }
+  .form-item-search-block-form {
+    float: left;
+    text-align: left;
+    width: 75%;
+    max-width: 13.92em;
+    display: inline-block;
+  }
+  label {
+    font-size: 1.3em;
+    font-weight: 600;
+  }
+  input[type="text"] {
+   font-size: 1.1em;
+   border: 0.135em solid $dark; 
+   padding: 0.36em;
+   height: 2.1375em;
+   &:focus {
+     border: 0.135em solid $mid;
+   }
+  }
+  input[type="text"],
+  input[type="submit"] {
+    width: 100%;
+    margin: 0;
+  }
+  .form-actions {
+    width: 25%;
+    display: inline-block;
+    float: left;
+  }
+  input[type="submit"] {
+    color: $white;
+    background-color: $dark;
+    font-size: 1.1em;
+    outline: 0;
+    border: 0.135em solid $dark;
+    vertical-align: -2.22em;
+    max-width: 4.55625em;
+    height: 2.13em;
+    &:focus,
+    &:hover {
+      background-color: $mid;
+    }
+  }
+  .search__advanced {
+    display: inline-block;
+    font-size: 1.125em;
+    font-weight: 300;
+    padding-top: 0.5em;
+    a:focus,
+    a:hover {
+      color: $dark-text;
+      border-bottom: 0.1em dotted $dark;
+    }
+  }
 }
 
-.header__part--brand .icon-sos-logo {
-  margin: 2em 8% 0 8%;
-  width: 84%;
-  height: 5.75em;
-  max-width: 17.8125em;
+.nav__trigger {
+  background-repeat: repeat;
+  cursor: pointer;
+  .icon-menu {
+    width: 1.5em;
+    height: 1.3125em;
+    margin: 1.025em 0.6em 1.025em 5%;
+    float: left;
+  }
+  span {
+    font-size: 1.3em;
+    font-weight: 400;
+    margin: 0.7em 0 0 0;
+    color: $white;
+    float: left;
+  }
 }
