The fake sound of progress

--- a/html/css/sass/_6-guide.scss
+++ b/html/css/sass/_6-guide.scss
@@ -2,6 +2,10 @@
 // Style Guide Layout / Styles
 //:::::::::::::::::::::::::::::
 
+#guidenav-trigger {
+  display: none;
+}
+
 // Navigation Menu
 
 .nav-wrapper {
