--- a/html/css/sass/patterns/0-header.scss
+++ b/html/css/sass/patterns/0-header.scss
@@ -18,7 +18,7 @@
 
 .header__part--brand {
   background-position: left top;
-    .icon-sos-logo {
+  .icon-sos-logo {
     margin: 2em 8% 0 8%;
     width: 84%;
     height: 5.75em;
@@ -30,16 +30,21 @@
 .nav__trigger {
   display: none;
   
+  .trigger__container {
+    width: 100%;
+    max-width: 17.7em;
+    margin: 0 auto 0 auto; 
+  }
   .icon-arrow-down,
   .icon-arrow-up {
     width: 0.625em;
-    margin: 1.375em 5% 0 0;  
+    margin: 1.375em 0 0 0;  
     float: right;
   }
   .icon-close {
     width: 1.25em;
     height: 1.3125em;
-    margin: 1.03125em 0.85em 1.03125em 5%;
+    margin: 1.03125em 0.85em 1.03125em 0;
     float: left;
   }
 }
@@ -47,6 +52,7 @@
 .js .header__search-trigger,
 .js .nav__trigger {
   display: block;
+  padding: 0 8% 0 8%;
 }
 
 .header__search-trigger {
@@ -55,7 +61,7 @@
   .icon-search {
     width: 1.6875em;
     height: 1.75em;
-    margin: 0.8125em 0.6em 0.8125em 5%;
+    margin: 0.8125em 0.6em 0.8125em 0;
     float: left;
   }
   span {
@@ -72,7 +78,7 @@
   padding: 1.8em 5% 0 5%;
   .search__container {
     width: 100%;
-    max-width: 20.323875em;
+    max-width: 20em;
     margin: 0 auto 0 auto;
     text-align: left;
   }
@@ -114,7 +120,7 @@
     border: 0.135em solid $dark;
     vertical-align: -2.22em;
     max-width: 4.55625em;
-    height: 2.13em;
+    height: 2.14em;
     &:focus,
     &:hover {
       background-color: $mid;
@@ -139,7 +145,7 @@
   .icon-menu {
     width: 1.5em;
     height: 1.3125em;
-    margin: 1.025em 0.6em 1.025em 5%;
+    margin: 1.025em 0.6em 1.025em 0;
     float: left;
   }
   span {
@@ -150,3 +156,28 @@
     float: left;
   }
 }
+
+@media only all and (min-width: 41em) {
+  
+  // Hide the mobile nav triggers
+  .js .header__search-trigger,
+  .no-js .header__search-trigger {
+    display: none;
+  }
+  
+  // Bring our header halves back together
+  .header__part--brand {
+    width: 50%;
+    float: left;
+  }
+  .header__part--search {
+    width: 50%;
+    float: left;
+  }
+  
+  // Undo the correction from the last breakpoint
+  .search-collapse {
+    margin-top: 0;
+  }
+  
+} //end min 41em
