Header done for now - nav next

--- a/html/css/output/global.css
+++ b/html/css/output/global.css
@@ -1146,6 +1146,7 @@ pre {
 
 .js .header__search-trigger, .js .nav__trigger {
   display: block;
+  width: 100%;
   padding: 0 8% 0 8%; }
 
 .header__search-trigger {
@@ -1238,8 +1239,10 @@ pre {
   .header__part--search {
     width: 50%;
     float: left; }
-  .search-collapse {
-    margin-top: 0; } }
+  .js .nav__trigger {
+    display: none; }
+  .nav-collapse {
+    display: block; } }
 
 .pattern {
   background: url(../../assets/pattern.png);
