--- a/html/css/sass/_Patterns-ImportMap.scss
+++ b/html/css/sass/_Patterns-ImportMap.scss
@@ -2,6 +2,7 @@
 
 @import "patterns/0-footer";
 @import "patterns/0-header";
+@import "patterns/0-navigation";
 @import "patterns/01-blocks";
 @import "patterns/01-layout-cap";
 @import "patterns/02-buttons-and-calls-to-action";
