First mess with scale-colour

--- a/html/css/output/global.css
+++ b/html/css/output/global.css
@@ -1259,6 +1259,8 @@ pre {
 .main-nav li {
   background-color: #003552;
   margin-bottom: 0; }
+  .main-nav li:nth-child(2n) {
+    background-color: #002a42; }
 
 .pattern {
   background: url(../../assets/pattern.png);
