--- a/html/css/sass/patterns/0-navigation.scss
+++ b/html/css/sass/patterns/0-navigation.scss
@@ -4,4 +4,7 @@
 .main-nav li {
   background-color: $dark;
   margin-bottom: 0;
+  &:nth-child(2n) {
+    background-color: scale-color($dark, $lightness: -20%);
+  }
 }
