--- a/html/css/output/patterns/0-navigation.css
+++ b/html/css/output/patterns/0-navigation.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .pattern {
   background: url(../../assets/pattern.png);
   background: url(../../assets/pattern.svg), linear-gradient(transparent, transparent);
@@ -5,10 +6,89 @@
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
+.nav__trigger {
+  background-repeat: repeat;
+  background-color: #002C44;
+  cursor: pointer; }
+  .nav__trigger .icon-menu {
+    width: 1.5em;
+    height: 1.3125em;
+    margin: 1.025em 0.6em 1.025em 0;
+    float: left; }
+  .nav__trigger span {
+    font-size: 1.3em;
+    font-weight: 400;
+    margin: 0.7em 0 0 0;
+    color: #ffffff;
+    float: left; }
+
 .main-nav li {
-  background-color: #003552;
+  background-color: #00283e;
   margin-bottom: 0; }
   .main-nav li:nth-child(2n) {
-    background-color: #002a42; }
+    background-color: #002031; }
+
+.main-nav li a {
+  display: inline-block;
+  font-size: 1.1em;
+  color: #ffffff;
+  border-bottom: none;
+  padding: 0.6em 0 0.7em 8%; }
+
+.main-nav .parent .sectiontoggle {
+  display: none; }
+
+.js .main-nav .parent-item {
+  float: left; }
+
+.js .main-nav .parent .sectiontoggle {
+  display: block;
+  float: right;
+  padding: 0;
+  margin: 0.5em 5% 0.5em 0; }
+  .js .main-nav .parent .sectiontoggle div {
+    display: inline-block;
+    padding: 0.1em 0.4em;
+    background-color: #00131d; }
+  .js .main-nav .parent .sectiontoggle .icon-arrow-down, .js .main-nav .parent .sectiontoggle .icon-arrow-up {
+    width: 0.625em;
+    height: 0.625em; }
+
+.main-nav .sub-menu {
+  clear: both; }
+
+.js .main-nav .sub-menu {
+  visibility: hidden;
+  height: 0; }
+
+.js .main-nav .sub-menu.open {
+  visibility: visible;
+  height: auto; }
+
+.main-nav .sub-menu li {
+  background-color: #003552; }
+  .main-nav .sub-menu li:nth-child(2n) {
+    background-color: #002d46; }
+
+.main-nav .sub-menu li a {
+  font-size: 1em; }
+  .main-nav .sub-menu li a:before {
+    content: "— "; }
+
+.js .nav__trigger {
+  position: fixed;
+  bottom: 0; }
+
+.js nav.nav-collapse {
+  position: fixed !important;
+  bottom: 3.375em; }
+
+.js nav.nav-collapse.opened {
+  clip: auto;
+  width: 100%; }
+  .js nav.nav-collapse.opened .sub-menu {
+    max-height: 20em;
+    max-height: 50vh;
+    overflow: scroll; }
 
 /*# sourceMappingURL=0-navigation.css.map */
