--- a/html/css/output/patterns/0-navigation.css
+++ b/html/css/output/patterns/0-navigation.css
@@ -77,10 +77,12 @@
 
 .js .nav__trigger {
   position: fixed;
+  -webkit-backface-visibility: hidden;
   bottom: 0; }
 
 .js nav.nav-collapse {
   position: fixed !important;
+  -webkit-backface-visibility: hidden;
   bottom: 3.375em; }
 
 .js nav.nav-collapse.opened {
@@ -89,6 +91,7 @@
   .js nav.nav-collapse.opened .sub-menu {
     max-height: 20em;
     max-height: 50vh;
-    overflow: scroll; }
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch; }
 
 /*# sourceMappingURL=0-navigation.css.map */
